--- a/src/index.css
+++ b/src/index.css
@@ -1,4 +1,4 @@
-* {
+/* * {
   margin: 0;
   box-sizing: border-box;
   padding: 0;
@@ -9,4 +9,4 @@ ul {
 a {
   text-decoration: none;
   color: black;
-}
+} */
