--- a/src/components/navbar/index.css
+++ b/src/components/navbar/index.css
@@ -25,7 +25,13 @@
 }
 */
 
-/*
+ul {
+  list-style: none;
+}
+a {
+  text-decoration: none;
+  color: black;
+}
 .navbar {
   width: 100%;
   font-size: 18px;
@@ -38,8 +44,17 @@
 .nav-list {
   display: flex;
   gap: 10px;
+  justify-content: center;
+  align-items: center;
 }
 .nav-link {
-  color: white;
+  /* color: white; */
 }
-*/
+a {
+  text-decoration: none;
+}
+.logo {
+  border-radius: 50%;
+  width: 50px;
+  height: 50px;
+}
