--- a/src/components/navbar/index.css
+++ b/src/components/navbar/index.css
@@ -33,6 +33,7 @@ a {
   color: black;
 }
 .navbar {
+  box-shadow: 0 5px 15px rgba(0, 0, 0, 0.1);
   width: 100%;
   font-size: 18px;
   display: flex;
