--- a/src/pages/home/index.css
+++ b/src/pages/home/index.css
@@ -28,3 +28,9 @@
   border-radius: 15px;
   object-fit: cover;
 }
+.hero-icons {
+  font-size: 1.5rem;
+  display: flex;
+  justify-content: center;
+  gap: 20px;
+}
