hero text span font increase

--- a/src/pages/home/index.css
+++ b/src/pages/home/index.css
@@ -23,7 +23,9 @@
 .hero-text h2 {
   font-size: 36px;
 }
-
+.hero-text span {
+  font-size: 2rem;
+}
 .hero-img-container {
   border-radius: 15px;
   max-width: 320px;
